[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/EnemySpawner.gd" type="Script" id=3]
[ext_resource path="res://src/Score.gd" type="Script" id=4]
[ext_resource path="res://sprites/spritesheets/combobar.png" type="Texture" id=5]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 2.0

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="PlayerHP" type="Label" parent="HUD"]
margin_left = 8.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 22.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 22.0
rect_min_size = Vector2( 64, 0 )
text = "00000000"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboTimer" type="Timer" parent="HUD"]
wait_time = 10.0

[node name="ComboGauge" type="TextureProgress" parent="HUD"]
anchor_right = 1.0
margin_bottom = 8.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -7.0
margin_right = 41.5
margin_bottom = 7.0
text = "Dandanmaku"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 16.0
margin_right = 41.5
margin_bottom = 36.0
shortcut = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="player_death" from="Player" to="." method="_on_Player_player_death"]
[connection signal="timeout" from="EnemySpawner/EnemySpawnTimer" to="EnemySpawner" method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="HUD/ComboTimer" to="HUD" method="_on_ComboTimer_timeout"]
[connection signal="pressed" from="GUI/StartButton" to="." method="_on_StartButton_pressed"]
